--- a/styles.css
+++ b/styles.css
@@ -68,12 +68,12 @@ h2 {
 
 .discordcontacts {
     background-image: url("images/discord.png");
-    background-size: 60px;
+    background-size: 60px 60px;
     background-repeat: none;
     height: 60px;
     width: 60px;
     text-indent: -999999px;
-    margin: 0 auto 0;
+    margin: 0 auto 0 auto;
 }
 
 nav {
