--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background: rgb(255, 255, 255);
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
 }
